# pagewiki

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BENCHMARKING.md  RELEASE_NOTES_v1.0.md  v0.2-design.md
obsidian-plugin/: main.ts  manifest.json  package.json  styles.css
scripts/: benchmark_vault.py  ollama_smoke.py
src/pagewiki/: __init__.py  _text.py  cache.py  cli.py  compile.py  frontmatter.py  logger.py  obsidian_config.py  ollama_client.py  pageindex_adapter.py  prompts.py  prompts_en.py  ranking.py  retrieval.py  server.py  tree.py  usage.py  usage_store.py  vault.py  watcher.py  webui.py  wiki_links.py
src/pagewiki/_vendor/: __init__.py
src/pagewiki/_vendor/pageindex/: __init__.py  utils.py  (+1 more)
src/pagewiki/retrieval/: __init__.py  core.py  cross_vault.py  decompose.py  helpers.py  types.py
tests/: test_cache.py  test_cli_rendering.py  test_compile.py  test_filter_tree.py  test_frontmatter.py  test_obsidian_config.py  test_pageindex_adapter.py  test_prompts.py  test_retrieval.py  test_retrieval_section_descend.py  test_retrieval_wiki_links.py  test_server.py  test_streaming_and_chat.py  test_summary_cache.py  test_v07_features.py  test_v08_features.py  test_v09_features.py  test_v10_features.py  test_v11_features.py  test_v12_features.py  test_v13_features.py  test_v14_features.py  test_v15_features.py  test_v16_features.py  test_v17_features.py  test_v18_features.py  test_v1_1_features.py  test_v1_stable.py  test_vault.py  test_vault_long_subtrees.py  test_vault_summarize.py  test_watcher.py  test_wiki_links.py
