[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagewiki"
version = "0.1.0"
description = "Vectorless reasoning-based RAG for Obsidian vaults, powered by local Gemma 4"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "leecg39" },
]
keywords = ["rag", "obsidian", "pageindex", "gemma", "ollama", "vectorless", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "click>=8.1.0",
  "pydantic>=2.5.0",
  "litellm>=1.40.0",
  "pageindex>=0.1.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
pagewiki = "pagewiki.cli:main"

[project.urls]
Homepage = "https://github.com/leecg39/pagewiki"
Repository = "https://github.com/leecg39/pagewiki"
Issues = "https://github.com/leecg39/pagewiki/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pagewiki"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
